## learning_model.py

import tensorflow as tf
from typing import List

class LearningModel:
    def __init__(self):
        # Initialize the TensorFlow model here with a default model or architecture
        # For simplicity, we're using a Sequential model from Keras as an example
        self.model = tf.keras.Sequential([
            tf.keras.layers.Dense(128, activation='relu'),
            tf.keras.layers.Dense(64, activation='relu'),
            tf.keras.layers.Dense(10, activation='softmax')
        ])
        
        # Compile the model with default settings
        self.model.compile(optimizer='adam',
                           loss='sparse_categorical_crossentropy',
                           metrics=['accuracy'])
    
    def train(self, data: List[tf.data.Dataset]) -> None:
        """
        Trains the TensorFlow model with the provided data.

        :param data: A list containing training and validation datasets.
        """
        if len(data) != 2:
            raise ValueError("Data list must contain exactly two tf.data.Dataset objects: training and validation datasets.")
        
        training_data, validation_data = data
        
        # Set default training parameters
        epochs = 10
        batch_size = 32
        
        # Train the model
        self.model.fit(training_data, epochs=epochs, batch_size=batch_size, validation_data=validation_data)
    
    def predict(self, input_data: tf.Tensor) -> str:
        """
        Uses the trained model to make a prediction based on the input data.

        :param input_data: A TensorFlow Tensor containing the input data for prediction.
        :return: A string representing the predicted class or outcome.
        """
        # Ensure input_data is a TensorFlow Tensor
        if not isinstance(input_data, tf.Tensor):
            raise TypeError("input_data must be a TensorFlow Tensor.")
        
        predictions = self.model.predict(input_data)
        
        # For simplicity, we're assuming the model outputs class probabilities
        # and we'll return the class with the highest probability
        predicted_class = tf.argmax(predictions, axis=1).numpy()
        
        # Convert the predicted class index to a string if needed
        # Here we simply return the index; in a real scenario, this should map to a meaningful label
        return str(predicted_class[0])
